# ip-geo

./: .pre-commit-config.yaml  Backend_Take_Home_Test.md  DEVELOPMENT_NOTES.md  README.md  export_openapi.py  pyproject.toml  ruff.toml  run_app.py
openapi/: openapi.generated.json  openapi.yaml
src/: __init__.py  errors.py  exception_handlers.py  ipapi_client.py  logger.py  main.py
src/clients/: base.py  ip_api_co_client.py  ip_api_com_client.py  ipapi_client.py
src/models/: common.py  request_models.py  response_models.py
tests/: common.py  test_ip_api_co_client.py  test_ip_api_com_client.py  test_ip_lookup_request.py  test_ipapi_client.py  test_main_api.py
